<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_fragment_search_rooms_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <FrameLayout
        android:id="@+id/fl_page_search_input_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#11ffffff"
        android:clickable="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/style_border2"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_26"
                android:textColor="#fff"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_page_search_alert_dialog_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/style_edittext_2"
                android:ems="10"
                android:hint="@string/txt_88"
                android:inputType="textPersonName|textPassword"
                android:minWidth="230dp"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_page_search_alert_dialog_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_select_menu_1"
                    android:clickable="true"
                    android:paddingLeft="9dp"
                    android:paddingTop="3dp"
                    android:paddingRight="9dp"
                    android:paddingBottom="3dp"
                    android:text="@string/txt_89"
                    android:textColor="#f00"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_page_search_alert_dialog_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:background="@drawable/style_select_menu_1"
                    android:clickable="true"
                    android:paddingLeft="12dp"
                    android:paddingTop="3dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="3dp"
                    android:text="OK"
                    android:textColor="#0f0"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>