<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tile_background"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:minHeight="60dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center|clip_vertical"
                android:clickable="true"
                android:padding="5dp"
                android:visibility="gone"
                app:srcCompat="@drawable/style_btn_settings" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/logo_top" />

                <TextView
                    android:id="@+id/tv_page_search_friends_top_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_31"
                    android:textColor="#cfcfcf"
                    android:textSize="23sp" />
            </LinearLayout>
        </FrameLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#111">

        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/et_page_search_friends_search_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/style_edittext_2"
                android:ems="10"
                android:hint="@string/txt_32"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_page_search_frineds_run_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/style_btn2"
                android:text="@string/txt_60"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_page_search_friends_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_page_search_friends_wait_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</FrameLayout>