<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:minHeight="60dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center|clip_vertical"
                android:clickable="true"
                android:padding="5dp"
                android:visibility="gone"
                app:srcCompat="@drawable/style_btn_settings" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/logo_top" />

                <TextView
                    android:id="@+id/tv_page_add_balans_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_4"
                    android:textColor="#cfcfcf"
                    android:textSize="23sp" />
            </LinearLayout>
        </FrameLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#111" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tile_background">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/txt_41"
                    android:textColor="#fff"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/money" />

                    <TextView
                        android:id="@+id/tv_page_add_balans_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textColor="#fff"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_page_add_balans_btn_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/style_btn1"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/video" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/txt_42"
                        android:textColor="#000"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_page_add_balans_btn_rulet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/style_btn1"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/roulette" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/txt_43"
                        android:textColor="#000"
                        android:textSize="22sp" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_page_rules_wait"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#22000000"
        android:clickable="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Загрузка..."
                android:textColor="#111"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_page_add_balans_animation_after_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone">

    </FrameLayout>

</FrameLayout>